# cmake-multi-package

./: CMakeLists.txt  README.md  README.rst  version.h
animals/: CMakeLists.txt  cat.c  cat.h  dog.c  dog.h
doc/: README.txt
pkg/: CMakeCommon.txt  CMakeLists.txt
pkg/animals/: CMakeLists.txt.in  PackageDescription.txt
pkg/animalsounds/: CMakeLists.txt.in  PackageDescription.txt
pkg/libanimals/: CMakeLists.txt.in
pkg/libanimals-dbg/: CMakeLists.txt.in  PackageDescription.txt
pkg/libanimals-dev/: CMakeLists.txt.in  PackageDescription.txt
testapp/: CMakeLists.txt  animaltest.c
